--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "webtemplate",
   "version": "1.0.0",
   "description": "this is a basic template for creating various web projects",
-  "main": "index.js",
+    "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+     "dev": "webpack -d --watch",
+    "build" : "webpack -p"
   },
   "repository": {
     "type": "git",
