--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "this is a basic template for creating various web projects",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack -d --watch",
-    "build": "webpack -p"
+    "dev": "webpack-dev-server --progress --colors",
+    "start": "webpack --watch && npm run dev"    
   },
   "repository": {
     "type": "git",
@@ -23,9 +22,23 @@
   },
   "homepage": "https://github.com/RMAssociates/WebShell#readme",
   "dependencies": {
+    "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "lodash": "^4.17.4",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "webpack": "^1.14.0"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "browser-sync": "^2.18.5",
+    "browser-sync-webpack-plugin": "^1.1.3",
+    "bs-fullscreen-message": "^1.0.0",
+    "strip-ansi": "^3.0.0",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-dev-server": "^1.16.2"
   }
 }
